--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
-    
+
 }
 h1{
     font-size: 50px;
@@ -9,8 +9,9 @@ h1{
 .orange{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
+    margin-bottom: 150px;
 }
 .half{
     width: 50%;
@@ -32,3 +33,36 @@ section{
     background-repeat: no-repeat;
 
 }
+.big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position:right ;
+    padding-right: 5px;
+}
+.down{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position:left ;
+
+
+}
+  
+
+.Experiance{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 30px gray ;
+    border-radius: 10px;
+    border-left: 10px solid ;
+}
+
+#web-dev{
+    border-left: 7px solid;
+ border-image: linear-gradient(blue,cyan) ;
+ border-image-slice:1;
+}
+footer p{
+    text-align: center;
+}
+
